--- a/index.html
+++ b/index.html
@@ -4,13 +4,67 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
-        <meta name="description" content="">
+        <meta name="description" content="A site that display my experience, skills, projects and my passion towards web development">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <!-- Manual css -->
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
+        <nav class="nav-bar">
+            <div class="mobile-nav">
+                <!-- <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Enable both scrolling & backdrop</button> -->
+                <div class="hamburger-menu" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+
+                <div class="mobile-logo">
+                    <h1>Sourabh Bundele</h1>
+                </div>
+            </div>
+            <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdrop with scrolling</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <p>Try scrolling the rest of the page to see this option in action.</p>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Hero Section -->
+        <section class="hero-section pb-3">
+            <div class="profile-pic">
+                <img src="./images/profilePic.jpg" alt="A person with a smiling face">
+            </div>
+            <div class="intro">
+                <h1 class="mb-0">
+                    I am Sourabh Bundele
+                    <span class="mt-1">Algorithmic Developer</span>
+                </h1>
+                <div class="resume mt-4">
+                    <a href="https://drive.google.com/file/d/1Wd980bbR91FKIUABJPUbTQ0hqX7lLzh7/view?usp=sharing">Resume</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- main -->
+        <main class="main">
+
+        </main>
+
         
-        
+        <footer>
+
+        </footer>
+
+        <!-- Bootstrap script -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <!-- Manual js -->
         <script src="./js/script.js"></script>
     </body>
 </html>
