Added project section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <li data-bs-dismiss="offcanvas"><a href="#skills">Skills</a></li>
                         <li data-bs-dismiss="offcanvas"><a href="#project">Projects</a></li>
                         <li data-bs-dismiss="offcanvas"><a  href="#">Contact</a></li>
-                        <li data-bs-dismiss="offcanvas"><a href="#">Resume</a></li>
+                        <li data-bs-dismiss="offcanvas"><a href="https://drive.google.com/file/d/1Wd980bbR91FKIUABJPUbTQ0hqX7lLzh7/view?usp=sharing">Resume</a></li>
                     </ul>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                     <span class="mt-1">Algorithmic Developer</span>
                 </h1>
                 <div class="resume mt-4">
-                    <a href="https://drive.google.com/file/d/1Wd980bbR91FKIUABJPUbTQ0hqX7lLzh7/view?usp=sharing">Resume</a>
+                    <a href="./Sourabh Bundele-cap02_009-1.pdf" download>Resume</a>
                 </div>
             </div>
         </section>
@@ -63,10 +63,16 @@
         <main class="main container mt-5 mb-5">
             <!-- about me -->
             <section class="about" id="about">
-                <h2 class="sec-heading">About Me</h2>
-                <div class="abt-content mt-3 rounded-2">
-                    <div class="side1 d-none">
-                        <img src="./images/profilePic.jpg" alt="A person with smiling face">
+                <h2 class="sec-heading">
+                    About Me
+                    <div></div>
+                    <!-- <div></div> -->
+                </h2>
+
+                <!-- abiout content -->
+                <div class="abt-content mt-5 rounded-2">
+                    <div class="side1 d-flex justify-content-center align-items-center">
+                        <img class="img-fluid" src="./images/hero1.svg" alt="An illustration image">
                     </div>
                     <div class="side2 p-3">
                         <p class="m-0 p-0 fs-5">I am currently enrolled in a Career Accelerator Program, focusing on Full Stack Web Development, with a strong foundation in HTML, CSS, Javascript, and Python (Data Structures and Algorithms). My practical experience includes a dynamic 3-month stint as a UI Designer at Integrano Technologies Pvt Ltd, where I honed my design skills and contributed to the user interface development process. Outside the realm of coding, I find joy in indulging my hobbies of sports and reading books. These interests not only provide a well-rounded balance to my tech-centric pursuits but also instill in me a holistic perspective that contributes to my creativity and problem-solving abilities. Excited about the endless possibilities in the tech world, I am committed to continuous learning and growth in the field of web development.</p>
@@ -76,9 +82,13 @@
 
             <!-- Skills Section -->
             <section class="skills mt-5" id="skills">
-                <h2 class="sec-heading">Skills</h2>
-                <div class="tech-stack container mt-3">
-                    <h3>Tech Stack</h3>
+                <h2 class="sec-heading">
+                    Skills
+                    <div></div>
+                    <!-- <div></div> -->
+                </h2>
+                <div class="tech-stack container mt-5">
+                    <h3>1. Tech Stack</h3>
                     <div class="flexBox mt-4">
                         <figure class="tech html">
                             <img class="img-fluid" src="./images/html-5.png" alt="Html5 logo">
@@ -108,7 +118,7 @@
                             </figcaption>
                         </figure>
                     </div>
-                    <h3>Tools</h3>
+                    <h3 class="mt-3">2. Tools</h3>
                     <div class="flexBox mt-4">
                         <figure class="tech vscode">
                             <img class="img-fluid" src="./images/vscode.png" alt="vscode logo">
@@ -136,6 +146,107 @@
 
             <section class="project mt-5" id="project">
                 <h2 class="sec-heading">Projects</h2>
+
+                <div class="project-cards container mt-5">
+                    <h3>1. HTML/CSS</h3>
+                    <div class="html-project mt-4">
+                        <div class="cards col-12">
+                            <div class="card-img">
+                                <img class="img-fluid" src="./images/bakery.png" alt="A bakery site image">
+                            </div>
+                            <div class="card-content">
+                                <h4>Bakery</h4>
+                                <p class="mb-0">A website designed using HTML and CSS. It is a static website just displaying UI of the website, basically its just a html/css template</p>
+                            </div>
+                            <div class="btns">
+                                <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Bakery">Source Code</a>
+                                <a href="https://sourabhb03-portfolio.netlify.app/templates/bakery/">Preview</a>
+                            </div>
+                        </div>
+
+                        <div class="cards col-12">
+                            <div class="card-img">
+                                <img class="img-fluid" src="./images/gym.png" alt="A bakery site image">
+                            </div>
+                            <div class="card-content">
+                                <h4>Gym</h4>
+                                <p class="mb-0">A website designed using HTML and CSS. It is a static website just displaying UI of the website, basically its just a html/css template</p>
+                            </div>
+                            <div class="btns">
+                                <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Gym">Source Code</a>
+                                <a href="https://sourabhb03-portfolio.netlify.app/templates/gym/">Preview</a>
+                            </div>
+                        </div>
+
+                        <div class="cards col-12">
+                            <div class="card-img">
+                                <img class="img-fluid" src="./images/hotel.png" alt="A bakery site image">
+                            </div>
+                            <div class="card-content">
+                                <h4>Hotel</h4>
+                                <p class="mb-0">A website designed using HTML and CSS. It is a static website just displaying UI of the website, basically its just a html/css template</p>
+                            </div>
+                            <div class="btns">
+                                <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Hotel">Source Code</a>
+                                <a href="https://sourabhb03-portfolio.netlify.app/templates/hotel/">Preview</a>
+                            </div>
+                        </div>
+
+                        <div class="cards col-12">
+                            <div class="card-img">
+                                <img class="img-fluid" src="./images/cars.png" alt="A bakery site image">
+                            </div>
+                            <div class="card-content">
+                                <h4>Cars</h4>
+                                <p class="mb-0">A website designed using HTML and CSS. It is a static website just displaying UI of the website, basically its just a html/css template</p>
+                            </div>
+                            <div class="btns">
+                                <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Garage">Source Code</a>
+                                <a href="https://sourabhb03-portfolio.netlify.app/templates/garage/">Preview</a>
+                            </div>
+                        </div>
+
+                        <div class="cards col-12">
+                            <div class="card-img">
+                                <img class="img-fluid" src="./images/timezone.png" alt="A bakery site image">
+                            </div>
+                            <div class="card-content">
+                                <h4>TimeZone</h4>
+                                <p class="mb-0">A website designed using HTML and CSS. It is a static website just displaying UI of the website, basically its just a html/css template</p>
+                            </div>
+                            <div class="btns">
+                                <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Fashion">Source Code</a>
+                                <a href="https://sourabhb03-portfolio.netlify.app/templates/fashion/">Preview</a>
+                            </div>
+                        </div>
+
+                        <div class="cards col-12">
+                            <div class="card-img">
+                                <img class="img-fluid" src="./images/technology.png" alt="A bakery site image">
+                            </div>
+                            <div class="card-content">
+                                <h4>Technology</h4>
+                                <p class="mb-0">A website designed using HTML and CSS. It is a static website just displaying UI of the website, basically its just a html/css template</p>
+                            </div>
+                            <div class="btns">
+                                <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Technology">Source Code</a>
+                                <a href="https://sourabhb03-portfolio.netlify.app/templates/technology/">Preview</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container mt-4">
+                    <h3>2.  Python</h3>
+                    <div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </div>
             </section>
         </main>
 
