refactor: changed mobile-nav structure

--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
     <body>
         <nav class="nav-bar">
             <div class="mobile-nav">
+                
+                <div class="mobile-logo">
+                    <h1>Sourabh Bundele</h1>
+                </div>
+
                 <!-- <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Enable both scrolling & backdrop</button> -->
                 <div class="hamburger-menu" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
                     <div class="line"></div>
                     <div class="line"></div>
                     <div class="line"></div>
-                </div>
-
-                <div class="mobile-logo">
-                    <h1>Sourabh Bundele</h1>
-                </div>
+                </div>       
             </div>
-            <div class="bg-dark text-white offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+            <div class="off-canvas bg-dark text-white offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
                 <div class="offcanvas-header">
                     <h2 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Sourabh Bundele</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -37,7 +38,7 @@
                         <li data-bs-dismiss="offcanvas"><a href="#skills">Skills</a></li>
                         <li data-bs-dismiss="offcanvas"><a href="#project">Projects</a></li>
                         <li data-bs-dismiss="offcanvas"><a  href="#">Contact</a></li>
-                        <li data-bs-dismiss="offcanvas"><a href="https://drive.google.com/file/d/1Wd980bbR91FKIUABJPUbTQ0hqX7lLzh7/view?usp=sharing">Resume</a></li>
+                        <li data-bs-dismiss="offcanvas"><a href="./images/resume/Sourabh Bundele-cap02_009-1.pdf" download>Resume</a></li>
                     </ul>
                 </div>
             </div>
@@ -54,7 +55,7 @@
                     <span class="mt-1">Algorithmic Developer</span>
                 </h1>
                 <div class="resume mt-4">
-                    <a href="./Sourabh Bundele-cap02_009-1.pdf" download>Resume</a>
+                    <a href="./images/resume/Sourabh Bundele-cap02_009-1.pdf" download>Resume</a>
                 </div>
             </div>
         </section>
