--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
                             </figcaption>
                         </figure>
 
+                        <figure class="tech css">
+                            <img class="img-fluid" src="./images/bootstrap.png" alt="Bootstrap Logo">
+                            <figcaption>
+                                <p class="text-center">Bootstrap</p>
+                            </figcaption>
+                        </figure>
+
                         <figure class="tech js">
                             <img class="img-fluid" src="./images/js.png" alt="Javascript logo">
                             <figcaption>
@@ -265,10 +272,10 @@
                 </div>
                 <div>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>home</li>
+                        <li>about</li>
+                        <li>skills</li>
+                        <li>project</li>
                     </ul>
                 </div>
                 <div>
