added contact and footer styling

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             </div>
                             <div class="card-content">
                                 <h4>Bakery</h4>
-                                <p class="mb-0"></p>
+                                <p class="mb-0">A website template based on Bakery Products cloned of one of colorlib templates <span class="d-block fw-bold pt-3">Tech Stack: HTMl, CSS</span></p>
                                 <div class="btns">
                                     <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Bakery">Source Code</a>
                                     <a href="https://sourabhb03-portfolio.netlify.app/templates/bakery/">Preview</a>
@@ -186,7 +186,7 @@
                             </div>
                             <div class="card-content">
                                 <h4>Gym</h4>
-                                <p class="mb-0">A website designed using HTML and CSS. It is a static website just displaying UI of the website, basically its just a html/css template</p>
+                                <p class="mb-0">A website template based on Gym and Fitness plans cloned of colorlib templates <span class="d-block fw-bold pt-3">Tech Stack: HTMl, CSS</span></p>
                                 <div class="btns">
                                     <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Gym">Source Code</a>
                                     <a href="https://sourabhb03-portfolio.netlify.app/templates/gym/">Preview</a>
@@ -201,7 +201,7 @@
                             </div>
                             <div class="card-content">
                                 <h4>Hotel</h4>
-                                <p class="mb-0">A website designed using HTML and CSS. It is a static website just displaying UI of the website, basically its just a html/css template</p>
+                                <p class="mb-0">A website template that showcase hotel rooms and its prices with photos of room <span class="d-block fw-bold pt-3">Tech Stack: HTMl, CSS</span></p>
                                 <div class="btns">
                                     <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Hotel">Source Code</a>
                                     <a href="https://sourabhb03-portfolio.netlify.app/templates/hotel/">Preview</a>
@@ -216,7 +216,7 @@
                             </div>
                             <div class="card-content">
                                 <h4>Cars</h4>
-                                <p class="mb-0">A website designed using HTML and CSS. It is a static website just displaying UI of the website, basically its just a html/css template</p>
+                                <p class="mb-0">A website that shows prices of various models with its features and specification <span class="d-block fw-bold pt-3">Tech Stack: HTMl, CSS</span></p>
                                 <div class="btns">
                                     <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Garage">Source Code</a>
                                     <a href="https://sourabhb03-portfolio.netlify.app/templates/garage/">Preview</a>
@@ -252,13 +252,13 @@
                 </h2>
                 <div class="contact-info mt-5">
                     <div>
-                        <p><span><i class="fa-solid fa-envelope"></i></span> <span>sbundele0318@gmail.com</span></p>
+                        <p><span><i class="fa-solid fa-envelope"></i></span> <span class="left-space">sbundele0318@gmail.com</span></p>
                     </div>
                     <div>
-                        <p><span><i class="fa-brands fa-linkedin"></i></span> <span><a href="https://www.linkedin.com/in/sourabh-bundele/">sourabh-bundele</a></span></p>
+                        <p><span><i class="fa-brands fa-linkedin"></i></span> <span class="left-space"><a href="https://www.linkedin.com/in/sourabh-bundele/">sourabh-bundele</a></span></p>
                     </div>
                     <div>
-                        <p><span><i class="fa-brands fa-square-github"></i></span> <span><a href="https://github.com/SBundele">SBundele</a></span></p>
+                        <p><span><i class="fa-brands fa-square-github"></i></span> <span class="left-space"><a href="https://github.com/SBundele">SBundele</a></span></p>
                     </div>
                 </div>
             </section>
@@ -266,20 +266,34 @@
 
         <!-- Footer -->
         <footer class="foot">
-            <div>
-                <div>
-                    <p></p>
+            <div class="container">
+                <div class="foot-about">
+                    <p>Currently enrolled in a Career Accelerator Program, focusing on Full Stack Web Development, with a strong foundation in HTML, CSS, Javascript, and Python (Data Structures and Algorithms). My practical experience includes a dynamic 3-month stint as a UI Designer at Integrano Technologies Pvt Ltd, where I honed my design skills and contributed to the user interface development process.</p>
                 </div>
-                <div>
+                <div class="foot-nav">
                     <ul>
-                        <li>home</li>
-                        <li>about</li>
-                        <li>skills</li>
-                        <li>project</li>
+                        <li><a href="./index.html">home</a></li>
+                        <li><a href="#about">about</a></li>
+                        <li><a href="#skills">skills</a></li>
+                        <li><a href="#project">project</a></li>
                     </ul>
                 </div>
-                <div>
-                    
+                <div class="foot-contact">
+                    <address><span><i class="fa-solid fa-house-chimney"></i></span> <span class="left-space">Maharashtra,Pune-411060</span></address>
+                    <p>
+                        <span><i class="fa-solid fa-square-phone-flip"></i></span> <span class="left-space">+91 7385091379</span>
+                    </p>
+                    <p>
+                        <span><i class="fa-solid fa-envelope"></i></span> <span class="left-space">sbundele0318@gmail.com</span>
+                    </p>
+                    <div class="online-links mt-3">
+                        <p>
+                            <a href="https://www.linkedin.com/in/sourabh-bundele/"><i class="fa-brands fa-linkedin"></i></a>
+                        </p>
+                        <p>
+                            <a href="https://github.com/SBundele"><i class="fa-brands fa-square-github"></i></a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </footer>
