--- a/index.html
+++ b/index.html
@@ -45,20 +45,23 @@
                     </ul>
                 </div>
             </div>
+            <hr>
         </nav>
-
+        
         <!-- Hero Section -->
         <section class="hero-section pb-3">
-            <div class="profile-pic">
-                <img src="./images/profilePic.jpg" alt="A person with a smiling face">
-            </div>
-            <div class="intro">
-                <h1 class="mb-0">
-                    I am Sourabh Bundele
-                    <span class="mt-1">Algorithmic Developer</span>
-                </h1>
-                <div class="resume mt-4">
-                    <a href="./images/resume/Sourabh Bundele-cap02_009-1.pdf" download>Resume</a>
+            <div class="flex">
+                <div class="profile-pic">
+                    <img src="./images/profilePic.jpg" alt="A person with a smiling face">
+                </div>
+                <div class="intro">
+                    <h1 class="mb-0">
+                        I am Sourabh Bundele
+                        <span class="mt-1">Algorithmic Developer</span>
+                    </h1>
+                    <div class="resume mt-4">
+                        <a href="./images/resume/Sourabh Bundele-cap02_009-1.pdf" download>Resume</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -250,7 +253,7 @@
                     Contact
                     <div></div>
                 </h2>
-                <div class="contact-info mt-5">
+                <div class="contact-info mt-4">
                     <div>
                         <p><span><i class="fa-solid fa-envelope"></i></span> <span class="left-space">sbundele0318@gmail.com</span></p>
                     </div>
@@ -266,7 +269,7 @@
 
         <!-- Footer -->
         <footer class="foot">
-            <div class="container">
+            <div class="flexBox container">
                 <div class="foot-about">
                     <p>Currently enrolled in a Career Accelerator Program, focusing on Full Stack Web Development, with a strong foundation in HTML, CSS, Javascript, and Python (Data Structures and Algorithms). My practical experience includes a dynamic 3-month stint as a UI Designer at Integrano Technologies Pvt Ltd, where I honed my design skills and contributed to the user interface development process.</p>
                 </div>
