added desktop styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,9 +40,26 @@
                         <li data-bs-dismiss="offcanvas"><a href="#about">About</a></li>
                         <li data-bs-dismiss="offcanvas"><a href="#skills">Skills</a></li>
                         <li data-bs-dismiss="offcanvas"><a href="#project">Projects</a></li>
-                        <li data-bs-dismiss="offcanvas"><a  href="#">Contact</a></li>
+                        <li data-bs-dismiss="offcanvas"><a  href="#contact">Contact</a></li>
                         <li data-bs-dismiss="offcanvas"><a href="./images/resume/Sourabh Bundele-cap02_009-1.pdf" download>Resume</a></li>
                     </ul>
+                </div>
+            </div>
+
+            <div class="desktop">
+                <div class="flexBox">
+                    <div class="desktop-logo">
+                        <h1>Sourabh Bundele</h1>
+                    </div>
+                    <div class="desktop-nav">
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#skills">Skills</a></li>
+                            <li><a href="#project">Project</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <hr>
@@ -248,7 +265,7 @@
             </section>
 
             <!-- Contact -->
-            <section class="contact mt-5">
+            <section class="contact mt-5" id="contact">
                 <h2 class="sec-heading">
                     Contact
                     <div></div>
