--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="desktop">
                 <div class="flexBox">
                     <div class="desktop-logo">
-                        <h1>Sourabh Bundele</h1>
+                        <h1><a href="./index.html">SB</a></h1>
                     </div>
                     <div class="desktop-nav">
                         <ul>
@@ -58,6 +58,7 @@
                             <li><a href="#skills">Skills</a></li>
                             <li><a href="#project">Project</a></li>
                             <li><a href="#contact">Contact</a></li>
+                            <li><a href="./images/resume/Sourabh Bundele-cap02_009-1.pdf">Resume</a></li>
                         </ul>
                     </div>
                 </div>
@@ -270,15 +271,20 @@
                     Contact
                     <div></div>
                 </h2>
-                <div class="contact-info mt-4">
-                    <div>
-                        <p><span><i class="fa-solid fa-envelope"></i></span> <span class="left-space">sbundele0318@gmail.com</span></p>
+                <div class="contact-content">
+                    <div class="contact-image mt-4">
+                        <img src="./images/contact-me.png" alt="a person contacting using laptop">
                     </div>
-                    <div>
-                        <p><span><i class="fa-brands fa-linkedin"></i></span> <span class="left-space"><a href="https://www.linkedin.com/in/sourabh-bundele/">sourabh-bundele</a></span></p>
-                    </div>
-                    <div>
-                        <p><span><i class="fa-brands fa-square-github"></i></span> <span class="left-space"><a href="https://github.com/SBundele">SBundele</a></span></p>
+                    <div class="contact-info mt-4 mt-lg-0">
+                        <div>
+                            <p><span><i class="fa-solid fa-envelope"></i></span> <span class="left-space">sbundele0318@gmail.com</span></p>
+                        </div>
+                        <div>
+                            <p><span><i class="fa-brands fa-linkedin"></i></span> <span class="left-space"><a href="https://www.linkedin.com/in/sourabh-bundele/">sourabh-bundele</a></span></p>
+                        </div>
+                        <div>
+                            <p><span><i class="fa-brands fa-square-github"></i></span> <span class="left-space"><a href="https://github.com/SBundele">SBundele</a></span></p>
+                        </div>
                     </div>
                 </div>
             </section>
