added hover effects to nav and about section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <!-- Navbar -->
-        <nav class="nav-bar">
+        <nav class="nav-bar" id="nav">
             <div class="mobile-nav">
                 
                 <div class="mobile-logo">
@@ -36,7 +36,7 @@
                 </div>
                 <div class="offcanvas-body">
                     <ul class="ls d-flex flex-column justify-content-center align-items-center">
-                        <li><a data-bs-dismiss="offcanvas" href="#">Home</a></li>
+                        <li data-bs-dismiss="offcanvas"><a href="./index.html">Home</a></li>
                         <li data-bs-dismiss="offcanvas"><a href="#about">About</a></li>
                         <li data-bs-dismiss="offcanvas"><a href="#skills">Skills</a></li>
                         <li data-bs-dismiss="offcanvas"><a href="#project">Projects</a></li>
@@ -68,7 +68,7 @@
         
         <!-- Hero Section -->
         <section class="hero-section pb-3">
-            <div class="flex">
+            <div class="flex container pt-3 pb-3">
                 <div class="profile-pic">
                     <img src="./images/profilePic.jpg" alt="Sourabh Bundele">
                 </div>
@@ -78,7 +78,7 @@
                         <span class="mt-1">Algorithmic Developer</span>
                     </h1>
                     <div class="resume mt-4">
-                        <a href="./images/resume/sourabh_bundele.pdf" download>Resume</a>
+                        <a href="./images/resume/sourabh_bundele.pdf" download><button>Resume</button></a>
                     </div>
                 </div>
             </div>
