--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Portfolio</title>
         <meta name="description" content="A site that display my experience, skills, projects and my passion towards web development">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Favicon -->
+        <link rel="icon" href= "./images/favicon/0.5x/Artboard 1@0.5x.png" type="image/x-icon"> 
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <!-- Font Awesome -->
@@ -70,7 +72,7 @@
         <section class="hero-section pb-3">
             <div class="flex container pt-3 pb-3">
                 <div class="profile-pic">
-                    <img src="./images/profilePic.jpg" alt="Sourabh Bundele">
+                    <img src="./images/profile3.png" alt="Sourabh Bundele">
                 </div>
                 <div class="intro">
                     <h1 class="mb-0">
@@ -260,7 +262,7 @@
                                 </p>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Maze_Solver">Source Code</a>
-                                    <a href="">Demo</a>
+                                    <a href="./maze.html" target="_blank">Demo</a>
                                 </div>
                             </div>
                         </div>
@@ -272,12 +274,12 @@
                             <div class="card-content">
                                 <h4>Weather App</h4>
                                 <p class="mb-0">
-                                    A CLI app that fetches the weather data from weather API using request module and display it on the terminal.
+                                    A CLI app that fetches the weather data from open weather API using request module and display it on the terminal.
                                     <span class="d-block fw-bold pt-3">Tech Stack: Python</span>
                                 </p>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Weather_App">Source Code</a>
-                                    <a href="">Demo</a>
+                                    <a href="./weather.html" target="_blank">Demo</a>
                                 </div>
                             </div>
                         </div>
@@ -294,7 +296,7 @@
                                 </p>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Typing_Master">Source Code</a>
-                                    <a href="">Demo</a>
+                                    <a href="./typing-text.html" target="_blank">Demo</a>
                                 </div>
                             </div>
                         </div>
@@ -311,7 +313,24 @@
                                 </p>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Youtube_Music_Downloader">Source Code</a>
-                                    <a href="">Demo</a>
+                                    <a href="./youtube.html" target="_blank">Demo</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="cards col-12">
+                            <div class="card-img">
+                                <img class="img-fluid" src="./images/insta.png" alt="instagram logo">
+                            </div>
+                            <div class="card-content">
+                                <h4>Instagram Downloader</h4>
+                                <p class="mb-0">
+                                    A CLI app that will help you to download Instagram Latest Post simply by providing the insta username in the terminal.
+                                    <span class="d-block fw-bold pt-3">Tech Stack: Python</span>
+                                </p>
+                                <div class="btns">
+                                    <a href="https://github.com/SBundele/Instagram-post-download">Source Code</a>
+                                    <a href="./instagram.html" target="_blank">Demo</a>
                                 </div>
                             </div>
                         </div>
