moved project html in projects folder

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                 </p>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Maze_Solver">Source Code</a>
-                                    <a href="./maze.html" target="_blank">Demo</a>
+                                    <a href="./projects/maze.html" target="_blank">Demo</a>
                                 </div>
                             </div>
                         </div>
@@ -279,7 +279,7 @@
                                 </p>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Weather_App">Source Code</a>
-                                    <a href="./weather.html" target="_blank">Demo</a>
+                                    <a href="./projects/weather.html" target="_blank">Demo</a>
                                 </div>
                             </div>
                         </div>
@@ -296,7 +296,7 @@
                                 </p>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Typing_Master">Source Code</a>
-                                    <a href="./typing-text.html" target="_blank">Demo</a>
+                                    <a href="./projects/typing-text.html" target="_blank">Demo</a>
                                 </div>
                             </div>
                         </div>
@@ -313,7 +313,7 @@
                                 </p>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Youtube_Music_Downloader">Source Code</a>
-                                    <a href="./youtube.html" target="_blank">Demo</a>
+                                    <a href="./projects/youtube.html" target="_blank">Demo</a>
                                 </div>
                             </div>
                         </div>
@@ -330,7 +330,7 @@
                                 </p>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Instagram-post-download">Source Code</a>
-                                    <a href="./instagram.html" target="_blank">Demo</a>
+                                    <a href="./projects/instagram.html" target="_blank">Demo</a>
                                 </div>
                             </div>
                         </div>
