fixed bug of link address

--- a/projects/weather.html
+++ b/projects/weather.html
@@ -11,7 +11,7 @@
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" >
         <!-- Manual css -->
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
 
         <style>
             @media screen and (min-width: 991.9px) {
@@ -44,8 +44,8 @@
                 </div>
                 <div class="offcanvas-body">
                     <ul class="ls d-flex flex-column justify-content-center align-items-center">
-                        <li data-bs-dismiss="offcanvas"><a href="./index.html">Home</a></li>
-                        <li data-bs-dismiss="offcanvas"><a href="./images/resume/sourabh_bundele.pdf" download>Resume</a></li>
+                        <li data-bs-dismiss="offcanvas"><a href="../index.html">Home</a></li>
+                        <li data-bs-dismiss="offcanvas"><a href="../images/resume/sourabh_bundele.pdf" download>Resume</a></li>
                     </ul>
                 </div>
             </div>
@@ -53,12 +53,12 @@
             <div class="desktop">
                 <div class="flexBox">
                     <div class="desktop-logo">
-                        <h1><a href="./index.html">SB</a></h1>
+                        <h1><a href="../index.html">SB</a></h1>
                     </div>
                     <div class="desktop-nav">
                         <ul>
                             <li><a href="#" target="_self">Home</a></li>
-                            <li><a href="./images/resume/sourabh_bundele.pdf" target="_blank">Resume</a></li>
+                            <li><a href="../images/resume/sourabh_bundele.pdf" target="_blank">Resume</a></li>
                         </ul>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
 
         <div class = "video_section container">
             <h1>Fetch City Temperature using API</h1>
-            <video src="./project_videos/Weather App.mp4" controls>
+            <video src="../project_videos/Weather App.mp4" controls>
             </video>
         </div>
 
@@ -82,10 +82,7 @@
                 <div class="foot-nav">
                     <p>Quick Links</p>
                     <ul>
-                        <li><a href="./index.html">home</a></li>
-                        <li><a href="#about">about</a></li>
-                        <li><a href="#skills">skills</a></li>
-                        <li><a href="#project">project</a></li>
+                        <li><a href="../index.html">Home</a></li>
                     </ul>
                 </div>
                 <div class="foot-contact">
