corrected instagram post download video linke

--- a/projects/instagram.html
+++ b/projects/instagram.html
@@ -69,7 +69,7 @@
 
         <div class = "video_section container">
             <h1>Download Latest Instagram Post</h1>
-            <video src="../projects/instagram.html" controls>
+            <video src="../project_videos/instagram.mp4" controls>
             </video>
         </div>
 
