--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Portfolio</title>
-        <meta name="description" content="A site that display my experience, skills, projects and my passion towards web development">
+        <meta name="description" content="A site that display my experience, skills, projects and my passion towards Full Stack web development">
+        <meta name="keywords" content="Sourabh saurabh sourabh Saurabh sbundele sbundele0318 sbundele03 netlify">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
